sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On HEADER_FILE shift to state 1
-- On programa shift to state 2
-- On includes shift to state 3
-- On INTEGER reduce production includes -> 
-- On FLOAT reduce production includes -> 
-- On EOF reduce production includes -> 
-- On CHAR reduce production includes -> 
-- On BOOL reduce production includes -> 

State 1:
includes -> HEADER_FILE . [ INTEGER FLOAT EOF CHAR BOOL ]
-- On INTEGER reduce production includes -> HEADER_FILE 
-- On FLOAT reduce production includes -> HEADER_FILE 
-- On EOF reduce production includes -> HEADER_FILE 
-- On CHAR reduce production includes -> HEADER_FILE 
-- On BOOL reduce production includes -> HEADER_FILE 

State 2:
programa' -> programa . [ # ]
-- On # accept programa

State 3:
programa -> includes . funcoes EOF [ # ]
-- On INTEGER shift to state 4
-- On FLOAT shift to state 8
-- On CHAR shift to state 9
-- On BOOL shift to state 10
-- On tipo shift to state 175
-- On funcoes shift to state 186
-- On funcao shift to state 188
-- On EOF reduce production funcoes -> 

State 4:
funcao -> INTEGER . MAIN OPEN_PARENTHESIS argumentos CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
tipo -> INTEGER . [ ID ]
-- On MAIN shift to state 5
-- On ID reduce production tipo -> INTEGER 

State 5:
funcao -> INTEGER MAIN . OPEN_PARENTHESIS argumentos CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
-- On OPEN_PARENTHESIS shift to state 6

State 6:
funcao -> INTEGER MAIN OPEN_PARENTHESIS . argumentos CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
-- On INTEGER shift to state 7
-- On FLOAT shift to state 8
-- On CHAR shift to state 9
-- On BOOL shift to state 10
-- On tipo shift to state 11
-- On seq shift to state 13
-- On argumentos shift to state 16
-- On argumento shift to state 174
-- On CLOSE_PARENTHESIS reduce production argumentos -> 

State 7:
tipo -> INTEGER . [ ID ]
-- On ID reduce production tipo -> INTEGER 

State 8:
tipo -> FLOAT . [ ID ]
-- On ID reduce production tipo -> FLOAT 

State 9:
tipo -> CHAR . [ ID ]
-- On ID reduce production tipo -> CHAR 

State 10:
tipo -> BOOL . [ ID ]
-- On ID reduce production tipo -> BOOL 

State 11:
argumento -> tipo . ID [ COMA CLOSE_PARENTHESIS ]
-- On ID shift to state 12

State 12:
argumento -> tipo ID . [ COMA CLOSE_PARENTHESIS ]
-- On COMA reduce production argumento -> tipo ID 
-- On CLOSE_PARENTHESIS reduce production argumento -> tipo ID 

State 13:
argumentos -> seq . [ CLOSE_PARENTHESIS ]
seq -> seq . COMA argumento [ COMA CLOSE_PARENTHESIS ]
-- On COMA shift to state 14
-- On CLOSE_PARENTHESIS reduce production argumentos -> seq 

State 14:
seq -> seq COMA . argumento [ COMA CLOSE_PARENTHESIS ]
-- On INTEGER shift to state 7
-- On FLOAT shift to state 8
-- On CHAR shift to state 9
-- On BOOL shift to state 10
-- On tipo shift to state 11
-- On argumento shift to state 15

State 15:
seq -> seq COMA argumento . [ COMA CLOSE_PARENTHESIS ]
-- On COMA reduce production seq -> seq COMA argumento 
-- On CLOSE_PARENTHESIS reduce production seq -> seq COMA argumento 

State 16:
funcao -> INTEGER MAIN OPEN_PARENTHESIS argumentos . CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
-- On CLOSE_PARENTHESIS shift to state 17

State 17:
funcao -> INTEGER MAIN OPEN_PARENTHESIS argumentos CLOSE_PARENTHESIS . OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
-- On OPEN_CURLED_BRACKETS shift to state 18

State 18:
funcao -> INTEGER MAIN OPEN_PARENTHESIS argumentos CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS . comandos CLOSE_CURLED_BRACKETS [ INTEGER FLOAT EOF CHAR BOOL ]
-- On WHILE shift to state 19
-- On SWITCH shift to state 74
-- On SCANF shift to state 84
-- On PRINTF shift to state 91
-- On INTEGER shift to state 7
-- On IF shift to state 95
-- On ID shift to state 100
-- On FOR shift to state 104
-- On FLOAT shift to state 8
-- On DO shift to state 111
-- On CHAR shift to state 9
-- On BOOL shift to state 10
-- On tipo shift to state 113
-- On comandos shift to state 172
-- On comando shift to state 125
-- On cmd_while shift to state 128
-- On cmd_switch shift to state 129
-- On cmd_scanf shift to state 130
-- On cmd_printf shift to state 131
-- On cmd_incr shift to state 132
-- On cmd_if shift to state 133
-- On cmd_for shift to state 134
-- On cmd_do shift to state 135
-- On cmd_dec shift to state 136
-- On cmd_atrib shift to state 137
-- On CLOSE_CURLED_BRACKETS reduce production comandos -> 

State 19:
cmd_while -> WHILE . OPEN_PARENTHESIS expressao CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ WHILE SWITCH SEMICOLON SCANF RETURN PRINTF INTEGER IF ID FOR FLOAT DO CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL ]
-- On OPEN_PARENTHESIS shift to state 20

State 20:
cmd_while -> WHILE OPEN_PARENTHESIS . expressao CLOSE_PARENTHESIS OPEN_CURLED_BRACKETS comandos CLOSE_CURLED_BRACKETS [ WHILE SWITCH SEMICOLON SCANF RETURN PRINTF INTEGER IF ID FOR FLOAT DO CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 30
-- On expressao shift to state 71
-- On expr60 shift to state 35
-- On expr50 shift to state 36
-- On expr40 shift to state 37
-- On expr30 shift to state 43
-- On expr20 shift to state 48
-- On expr10 shift to state 64
-- On chama_func shift to state 40

State 21:
expr60 -> OPEN_PARENTHESIS . expressao CLOSE_PARENTHESIS [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 30
-- On expressao shift to state 69
-- On expr60 shift to state 35
-- On expr50 shift to state 36
-- On expr40 shift to state 37
-- On expr30 shift to state 43
-- On expr20 shift to state 48
-- On expr10 shift to state 64
-- On chama_func shift to state 40

State 22:
expr50 -> NOT . expr50 [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 28
-- On expr60 shift to state 35
-- On expr50 shift to state 68
-- On chama_func shift to state 40

State 23:
expr60 -> LITERAL_STRING . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr60 -> LITERAL_STRING 
-- On SWITCH reduce production expr60 -> LITERAL_STRING 
-- On SUBTRACTION reduce production expr60 -> LITERAL_STRING 
-- On SINGLE_QUOTE reduce production expr60 -> LITERAL_STRING 
-- On SEMICOLON reduce production expr60 -> LITERAL_STRING 
-- On SCANF reduce production expr60 -> LITERAL_STRING 
-- On RETURN reduce production expr60 -> LITERAL_STRING 
-- On PRINTF reduce production expr60 -> LITERAL_STRING 
-- On OR reduce production expr60 -> LITERAL_STRING 
-- On MULTIPLICATION reduce production expr60 -> LITERAL_STRING 
-- On MORE_THAN reduce production expr60 -> LITERAL_STRING 
-- On MORE_EQUAL_THAN reduce production expr60 -> LITERAL_STRING 
-- On LESS_THAN reduce production expr60 -> LITERAL_STRING 
-- On LESS_EQUAL_THAN reduce production expr60 -> LITERAL_STRING 
-- On INTEGER reduce production expr60 -> LITERAL_STRING 
-- On IF reduce production expr60 -> LITERAL_STRING 
-- On ID reduce production expr60 -> LITERAL_STRING 
-- On FOR reduce production expr60 -> LITERAL_STRING 
-- On FLOAT reduce production expr60 -> LITERAL_STRING 
-- On EQUALS reduce production expr60 -> LITERAL_STRING 
-- On DO reduce production expr60 -> LITERAL_STRING 
-- On DIVISION reduce production expr60 -> LITERAL_STRING 
-- On DIFFERENT reduce production expr60 -> LITERAL_STRING 
-- On COMA reduce production expr60 -> LITERAL_STRING 
-- On COLON reduce production expr60 -> LITERAL_STRING 
-- On CLOSE_PARENTHESIS reduce production expr60 -> LITERAL_STRING 
-- On CLOSE_CURLED_BRACKETS reduce production expr60 -> LITERAL_STRING 
-- On CHAR reduce production expr60 -> LITERAL_STRING 
-- On BREAK reduce production expr60 -> LITERAL_STRING 
-- On BOOL reduce production expr60 -> LITERAL_STRING 
-- On AND reduce production expr60 -> LITERAL_STRING 
-- On ADDITION reduce production expr60 -> LITERAL_STRING 

State 24:
expr60 -> LITERAL_INTEGER . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr60 -> LITERAL_INTEGER 
-- On SWITCH reduce production expr60 -> LITERAL_INTEGER 
-- On SUBTRACTION reduce production expr60 -> LITERAL_INTEGER 
-- On SINGLE_QUOTE reduce production expr60 -> LITERAL_INTEGER 
-- On SEMICOLON reduce production expr60 -> LITERAL_INTEGER 
-- On SCANF reduce production expr60 -> LITERAL_INTEGER 
-- On RETURN reduce production expr60 -> LITERAL_INTEGER 
-- On PRINTF reduce production expr60 -> LITERAL_INTEGER 
-- On OR reduce production expr60 -> LITERAL_INTEGER 
-- On MULTIPLICATION reduce production expr60 -> LITERAL_INTEGER 
-- On MORE_THAN reduce production expr60 -> LITERAL_INTEGER 
-- On MORE_EQUAL_THAN reduce production expr60 -> LITERAL_INTEGER 
-- On LESS_THAN reduce production expr60 -> LITERAL_INTEGER 
-- On LESS_EQUAL_THAN reduce production expr60 -> LITERAL_INTEGER 
-- On INTEGER reduce production expr60 -> LITERAL_INTEGER 
-- On IF reduce production expr60 -> LITERAL_INTEGER 
-- On ID reduce production expr60 -> LITERAL_INTEGER 
-- On FOR reduce production expr60 -> LITERAL_INTEGER 
-- On FLOAT reduce production expr60 -> LITERAL_INTEGER 
-- On EQUALS reduce production expr60 -> LITERAL_INTEGER 
-- On DO reduce production expr60 -> LITERAL_INTEGER 
-- On DIVISION reduce production expr60 -> LITERAL_INTEGER 
-- On DIFFERENT reduce production expr60 -> LITERAL_INTEGER 
-- On COMA reduce production expr60 -> LITERAL_INTEGER 
-- On COLON reduce production expr60 -> LITERAL_INTEGER 
-- On CLOSE_PARENTHESIS reduce production expr60 -> LITERAL_INTEGER 
-- On CLOSE_CURLED_BRACKETS reduce production expr60 -> LITERAL_INTEGER 
-- On CHAR reduce production expr60 -> LITERAL_INTEGER 
-- On BREAK reduce production expr60 -> LITERAL_INTEGER 
-- On BOOL reduce production expr60 -> LITERAL_INTEGER 
-- On AND reduce production expr60 -> LITERAL_INTEGER 
-- On ADDITION reduce production expr60 -> LITERAL_INTEGER 

State 25:
expr60 -> LITERAL_FLOAT . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr60 -> LITERAL_FLOAT 
-- On SWITCH reduce production expr60 -> LITERAL_FLOAT 
-- On SUBTRACTION reduce production expr60 -> LITERAL_FLOAT 
-- On SINGLE_QUOTE reduce production expr60 -> LITERAL_FLOAT 
-- On SEMICOLON reduce production expr60 -> LITERAL_FLOAT 
-- On SCANF reduce production expr60 -> LITERAL_FLOAT 
-- On RETURN reduce production expr60 -> LITERAL_FLOAT 
-- On PRINTF reduce production expr60 -> LITERAL_FLOAT 
-- On OR reduce production expr60 -> LITERAL_FLOAT 
-- On MULTIPLICATION reduce production expr60 -> LITERAL_FLOAT 
-- On MORE_THAN reduce production expr60 -> LITERAL_FLOAT 
-- On MORE_EQUAL_THAN reduce production expr60 -> LITERAL_FLOAT 
-- On LESS_THAN reduce production expr60 -> LITERAL_FLOAT 
-- On LESS_EQUAL_THAN reduce production expr60 -> LITERAL_FLOAT 
-- On INTEGER reduce production expr60 -> LITERAL_FLOAT 
-- On IF reduce production expr60 -> LITERAL_FLOAT 
-- On ID reduce production expr60 -> LITERAL_FLOAT 
-- On FOR reduce production expr60 -> LITERAL_FLOAT 
-- On FLOAT reduce production expr60 -> LITERAL_FLOAT 
-- On EQUALS reduce production expr60 -> LITERAL_FLOAT 
-- On DO reduce production expr60 -> LITERAL_FLOAT 
-- On DIVISION reduce production expr60 -> LITERAL_FLOAT 
-- On DIFFERENT reduce production expr60 -> LITERAL_FLOAT 
-- On COMA reduce production expr60 -> LITERAL_FLOAT 
-- On COLON reduce production expr60 -> LITERAL_FLOAT 
-- On CLOSE_PARENTHESIS reduce production expr60 -> LITERAL_FLOAT 
-- On CLOSE_CURLED_BRACKETS reduce production expr60 -> LITERAL_FLOAT 
-- On CHAR reduce production expr60 -> LITERAL_FLOAT 
-- On BREAK reduce production expr60 -> LITERAL_FLOAT 
-- On BOOL reduce production expr60 -> LITERAL_FLOAT 
-- On AND reduce production expr60 -> LITERAL_FLOAT 
-- On ADDITION reduce production expr60 -> LITERAL_FLOAT 

State 26:
expr60 -> LITERAL_CHAR . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr60 -> LITERAL_CHAR 
-- On SWITCH reduce production expr60 -> LITERAL_CHAR 
-- On SUBTRACTION reduce production expr60 -> LITERAL_CHAR 
-- On SINGLE_QUOTE reduce production expr60 -> LITERAL_CHAR 
-- On SEMICOLON reduce production expr60 -> LITERAL_CHAR 
-- On SCANF reduce production expr60 -> LITERAL_CHAR 
-- On RETURN reduce production expr60 -> LITERAL_CHAR 
-- On PRINTF reduce production expr60 -> LITERAL_CHAR 
-- On OR reduce production expr60 -> LITERAL_CHAR 
-- On MULTIPLICATION reduce production expr60 -> LITERAL_CHAR 
-- On MORE_THAN reduce production expr60 -> LITERAL_CHAR 
-- On MORE_EQUAL_THAN reduce production expr60 -> LITERAL_CHAR 
-- On LESS_THAN reduce production expr60 -> LITERAL_CHAR 
-- On LESS_EQUAL_THAN reduce production expr60 -> LITERAL_CHAR 
-- On INTEGER reduce production expr60 -> LITERAL_CHAR 
-- On IF reduce production expr60 -> LITERAL_CHAR 
-- On ID reduce production expr60 -> LITERAL_CHAR 
-- On FOR reduce production expr60 -> LITERAL_CHAR 
-- On FLOAT reduce production expr60 -> LITERAL_CHAR 
-- On EQUALS reduce production expr60 -> LITERAL_CHAR 
-- On DO reduce production expr60 -> LITERAL_CHAR 
-- On DIVISION reduce production expr60 -> LITERAL_CHAR 
-- On DIFFERENT reduce production expr60 -> LITERAL_CHAR 
-- On COMA reduce production expr60 -> LITERAL_CHAR 
-- On COLON reduce production expr60 -> LITERAL_CHAR 
-- On CLOSE_PARENTHESIS reduce production expr60 -> LITERAL_CHAR 
-- On CLOSE_CURLED_BRACKETS reduce production expr60 -> LITERAL_CHAR 
-- On CHAR reduce production expr60 -> LITERAL_CHAR 
-- On BREAK reduce production expr60 -> LITERAL_CHAR 
-- On BOOL reduce production expr60 -> LITERAL_CHAR 
-- On AND reduce production expr60 -> LITERAL_CHAR 
-- On ADDITION reduce production expr60 -> LITERAL_CHAR 

State 27:
expr60 -> LITERAL_BOOL . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr60 -> LITERAL_BOOL 
-- On SWITCH reduce production expr60 -> LITERAL_BOOL 
-- On SUBTRACTION reduce production expr60 -> LITERAL_BOOL 
-- On SINGLE_QUOTE reduce production expr60 -> LITERAL_BOOL 
-- On SEMICOLON reduce production expr60 -> LITERAL_BOOL 
-- On SCANF reduce production expr60 -> LITERAL_BOOL 
-- On RETURN reduce production expr60 -> LITERAL_BOOL 
-- On PRINTF reduce production expr60 -> LITERAL_BOOL 
-- On OR reduce production expr60 -> LITERAL_BOOL 
-- On MULTIPLICATION reduce production expr60 -> LITERAL_BOOL 
-- On MORE_THAN reduce production expr60 -> LITERAL_BOOL 
-- On MORE_EQUAL_THAN reduce production expr60 -> LITERAL_BOOL 
-- On LESS_THAN reduce production expr60 -> LITERAL_BOOL 
-- On LESS_EQUAL_THAN reduce production expr60 -> LITERAL_BOOL 
-- On INTEGER reduce production expr60 -> LITERAL_BOOL 
-- On IF reduce production expr60 -> LITERAL_BOOL 
-- On ID reduce production expr60 -> LITERAL_BOOL 
-- On FOR reduce production expr60 -> LITERAL_BOOL 
-- On FLOAT reduce production expr60 -> LITERAL_BOOL 
-- On EQUALS reduce production expr60 -> LITERAL_BOOL 
-- On DO reduce production expr60 -> LITERAL_BOOL 
-- On DIVISION reduce production expr60 -> LITERAL_BOOL 
-- On DIFFERENT reduce production expr60 -> LITERAL_BOOL 
-- On COMA reduce production expr60 -> LITERAL_BOOL 
-- On COLON reduce production expr60 -> LITERAL_BOOL 
-- On CLOSE_PARENTHESIS reduce production expr60 -> LITERAL_BOOL 
-- On CLOSE_CURLED_BRACKETS reduce production expr60 -> LITERAL_BOOL 
-- On CHAR reduce production expr60 -> LITERAL_BOOL 
-- On BREAK reduce production expr60 -> LITERAL_BOOL 
-- On BOOL reduce production expr60 -> LITERAL_BOOL 
-- On AND reduce production expr60 -> LITERAL_BOOL 
-- On ADDITION reduce production expr60 -> LITERAL_BOOL 

State 28:
chama_func -> ID . OPEN_PARENTHESIS args CLOSE_PARENTHESIS [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On OPEN_PARENTHESIS shift to state 29

State 29:
chama_func -> ID OPEN_PARENTHESIS . args CLOSE_PARENTHESIS [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 30
-- On seqs shift to state 31
-- On expressao shift to state 65
-- On expr60 shift to state 35
-- On expr50 shift to state 36
-- On expr40 shift to state 37
-- On expr30 shift to state 43
-- On expr20 shift to state 48
-- On expr10 shift to state 64
-- On chama_func shift to state 40
-- On args shift to state 66
-- On CLOSE_PARENTHESIS reduce production args -> 

State 30:
chama_func -> ID . OPEN_PARENTHESIS args CLOSE_PARENTHESIS [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
expressao -> ID . [ WHILE SWITCH SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR INTEGER IF ID FOR FLOAT DO COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ]
-- On OPEN_PARENTHESIS shift to state 29
-- On WHILE reduce production expressao -> ID 
-- On SWITCH reduce production expressao -> ID 
-- On SINGLE_QUOTE reduce production expressao -> ID 
-- On SEMICOLON reduce production expressao -> ID 
-- On SCANF reduce production expressao -> ID 
-- On RETURN reduce production expressao -> ID 
-- On PRINTF reduce production expressao -> ID 
-- On OR reduce production expressao -> ID 
-- On INTEGER reduce production expressao -> ID 
-- On IF reduce production expressao -> ID 
-- On ID reduce production expressao -> ID 
-- On FOR reduce production expressao -> ID 
-- On FLOAT reduce production expressao -> ID 
-- On DO reduce production expressao -> ID 
-- On COMA reduce production expressao -> ID 
-- On COLON reduce production expressao -> ID 
-- On CLOSE_PARENTHESIS reduce production expressao -> ID 
-- On CLOSE_CURLED_BRACKETS reduce production expressao -> ID 
-- On CHAR reduce production expressao -> ID 
-- On BREAK reduce production expressao -> ID 
-- On BOOL reduce production expressao -> ID 
-- On AND reduce production expressao -> ID 

State 31:
args -> seqs . [ CLOSE_PARENTHESIS ]
seqs -> seqs . COMA expressao [ COMA CLOSE_PARENTHESIS ]
-- On COMA shift to state 32
-- On CLOSE_PARENTHESIS reduce production args -> seqs 

State 32:
seqs -> seqs COMA . expressao [ COMA CLOSE_PARENTHESIS ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 30
-- On expressao shift to state 33
-- On expr60 shift to state 35
-- On expr50 shift to state 36
-- On expr40 shift to state 37
-- On expr30 shift to state 43
-- On expr20 shift to state 48
-- On expr10 shift to state 64
-- On chama_func shift to state 40

State 33:
expressao -> expressao . AND expr10 [ OR COMA CLOSE_PARENTHESIS AND ]
expressao -> expressao . OR expr10 [ OR COMA CLOSE_PARENTHESIS AND ]
seqs -> seqs COMA expressao . [ COMA CLOSE_PARENTHESIS ]
-- On OR shift to state 34
-- On AND shift to state 62
-- On COMA reduce production seqs -> seqs COMA expressao 
-- On CLOSE_PARENTHESIS reduce production seqs -> seqs COMA expressao 

State 34:
expressao -> expressao OR . expr10 [ WHILE SWITCH SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR INTEGER IF ID FOR FLOAT DO COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ]
-- On OPEN_PARENTHESIS shift to state 21
-- On NOT shift to state 22
-- On LITERAL_STRING shift to state 23
-- On LITERAL_INTEGER shift to state 24
-- On LITERAL_FLOAT shift to state 25
-- On LITERAL_CHAR shift to state 26
-- On LITERAL_BOOL shift to state 27
-- On ID shift to state 28
-- On expr60 shift to state 35
-- On expr50 shift to state 36
-- On expr40 shift to state 37
-- On expr30 shift to state 43
-- On expr20 shift to state 48
-- On expr10 shift to state 57
-- On chama_func shift to state 40

State 35:
expr50 -> expr60 . [ WHILE SWITCH SUBTRACTION SINGLE_QUOTE SEMICOLON SCANF RETURN PRINTF OR MULTIPLICATION MORE_THAN MORE_EQUAL_THAN LESS_THAN LESS_EQUAL_THAN INTEGER IF ID FOR FLOAT EQUALS DO DIVISION DIFFERENT COMA COLON CLOSE_PARENTHESIS CLOSE_CURLED_BRACKETS CHAR BREAK BOOL AND ADDITION ]
-- On WHILE reduce production expr50 -> expr60 
-- On SWITCH reduce production expr50 -> expr60 
-- On SUBTRACTION reduce production expr50 -> expr60 
-- On SINGLE_QUOTE reduce production expr50 -> expr60 
-- On SEMICOLON reduce production expr50 -> expr60 
-- On SCANF reduce production expr50 -> expr60 
-- On RETURN reduce production expr50 -> expr60 
-- On PRINTF reduce production expr50 -> expr60 
-- On OR reduce production expr50 -> expr60 
-- On MULTIPLICATION reduce production expr50 -> expr60 
-- On MORE_THAN reduce production expr50 -> expr60 
-- On MORE_EQUAL_THAN reduce production expr50 -> expr60 
-- On LESS_THAN reduce production expr50 -> expr60 
-- On LESS_EQUAL_THAN reduce production expr50 -> expr60 
-- On INTEGER reduce production expr50 -> expr60 
-- On IF reduce production expr50 -> expr60 
-- On ID reduce production expr50 -> expr60 
-- On FOR reduce production expr50 -> expr60 
-- On FLOAT reduce production expr50 -> expr60 
-- On EQUALS reduce production expr50 -> expr60 
-- On DO reduce production expr50 -> expr60 
-- On DIVISION reduce production expr50 -> expr60 
-- On DIFFERENT reduce production expr50 -> expr60 
-- On COMA reduce production expr50 -> expr60 
-- On COLON reduce production expr50 -> expr60 
-- On CLOSE_PARENTHESIS reduce production expr50 -> expr60 
-- On CLOSE_CURLED_BRACKETS reduce production expr50 -> expr60 
-- On CHAR reduce production expr50 -> expr60 
-- On BREAK reduce production expr50 -> expr60 
-- On BOOL reduce production expr50 -> expr60 
-- On AND reduce production expr50 -> expr60 
-- On ADDITION reduce production expr50 -> expr60 
